Fix overflow not displaying

--- a/src/app.scss
+++ b/src/app.scss
@@ -1175,8 +1175,8 @@ button,
 // From this point onwards, the CSS is attempting to be clean.
 
 .o-overflow-wrapper {
-  overflow: hidden;
-  height: 100%;
+  // overflow: hidden;
+  // height: 100%;
 }
 
 .o-overflow-enabler {
